# LoopCode

./: .gitignore  CBinCovert.cpp  README.md  main.py  memo.sh  tensorflow_test.py  testcase.csv  testcase_generator.py  train_dataset_generator.py
afl/: afl-fuzz.c  afl-tmin.c
afl-jb/: afl-fuzz.c  afl-tmin.c  config.h
afl-lowry/: afl-fuzz.c  config.h
afl-yagol/: afl-fuzz.c
aflgo/: afl-fuzz.c  afl-tmin.c  config.h
loopPass/: .gitignore  CMakeLists.txt  memo.sh
loopPass/examples/1_ezloop/: loop.c
loopPass/examples/1_ezloop/aflgo/: LoopBBs.txt  run.sh
loopPass/examples/2_in-dep-loop/: loop.c
loopPass/examples/2_in-dep-loop/afl/: run.sh
loopPass/examples/2_in-dep-loop/aflgo/: LoopBBs.txt  run.sh
loopPass/examples/3_loopBranch/: lb.c
loopPass/idtfybranch/: CMakeLists.txt  README.txt  branch.cpp
loopPass/idtfyloop/: CMakeLists.txt  Idtfy.cpp  loop.cpp
loopPass/pass1/: README.txt
loopPass/pass2/: CMakeLists.txt  branch.cpp
loopPass/pass3/: CMakeLists.txt  README.txt  pass3.cpp
loopPass/pass4/: CMakeLists.txt  README.txt  pass4.cpp
loopPass/pyscripts/: colorize.py  filter.py
machine_learning_module/: README.md  bytes_converter.py  main.py  prepare_push.sh  requirements.txt  sklearn_test.py  tensorflow_test.py  testcase.csv  testcase_generator.py  train_dataset_generator.py  weight_diff_calculate.py
pyscripts/: colorize.py
scripts/: README.md  jasper-afl-gcc-version-lowry.sh  jasper-afl-gcc-version-ya.sh  jasper-afl-lowry-clustering.sh  jasper-afl-lowry-kmeans.sh  jasper-afl-lowry.sh  jasper-afl-ya.sh  jasper-afl.sh  jasper-fuzz.sh  (+16 more)
(+44 files in other folders)
